--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "the-words-client",
   "version": "0.0.0",
   "scripts": {
-    "dev": "bunx --bun vite",
+    "start": "bunx --bun vite",
     "build": "../node_modules/.bin/tsc && bunx --bun vite build",
     "lint": "../node_modules/.bin/eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "bunx --bun vite preview"
