--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "@types/node": "^20.9.3",
-    "socket.io": "^4.7.2"
+    "@types/node": "^20.9.3"
   }
 }
