--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.1",
-    "react-router-dom": "^6.18.0"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.1",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
   }
 }
