--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "the-words",
-  "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/bcrypt": "^5.0.2",
+    "pino-pretty": "^10.2.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2"
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.9.3"
   },
   "dependencies": {
-    "@types/node": "^20.9.3"
+    "bcrypt": "^5.1.1",
+    "pino": "^8.16.2",
+    "socket.io": "^4.7.2"
+  },
+  "scripts": {
+    "start:server": "NODE_ENV=development tsc --project ./tsconfig.server.json --watch"
   }
 }
